--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -273,7 +273,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
+   "id": "6516221d-f6a0-499b-8806-c53fa0e5c63e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales_data = sales_data.select(\"Order ID\", \"Product\", \"Quantity Ordered\", \"Price Each\", \"Order Date\", \"Purchase Address\", \\\n",
+    "                              \"Month\", \"Sales\", \"City\", \"Hour\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "ec504c66-37eb-499e-9815-2d61438d58f1",
    "metadata": {},
    "outputs": [
@@ -288,12 +299,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/07/07 16:58:05 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
-      "24/07/07 16:58:06 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , Order ID, Product, Quantity Ordered, Price Each, Order Date, Purchase Address, Month, Sales, City, Hour\n",
-      " Schema: _c0, Order ID, Product, Quantity Ordered, Price Each, Order Date, Purchase Address, Month, Sales, City, Hour\n",
-      "Expected: _c0 but found: \n",
-      "CSV file: file:///Users/bharathvelamala/Documents/project/sales_analyis/data/Sales_Data.csv\n",
       "                                                                                \r"
      ]
     },
@@ -319,7 +324,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>summary</th>\n",
-       "      <th>_c0</th>\n",
        "      <th>Order ID</th>\n",
        "      <th>Product</th>\n",
        "      <th>Quantity Ordered</th>\n",
@@ -346,12 +350,10 @@
        "      <td>185950</td>\n",
        "      <td>185950</td>\n",
        "      <td>185950</td>\n",
-       "      <td>185950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>mean</td>\n",
-       "      <td>8340.388475396612</td>\n",
        "      <td>230417.5693788653</td>\n",
        "      <td>None</td>\n",
        "      <td>1.1243828986286637</td>\n",
@@ -366,7 +368,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>stddev</td>\n",
-       "      <td>5450.554093395118</td>\n",
        "      <td>51512.73710999645</td>\n",
        "      <td>None</td>\n",
        "      <td>0.4427926240286694</td>\n",
@@ -381,7 +382,6 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>min</td>\n",
-       "      <td>0</td>\n",
        "      <td>141234</td>\n",
        "      <td>20in Monitor</td>\n",
        "      <td>1</td>\n",
@@ -396,7 +396,6 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>max</td>\n",
-       "      <td>9999</td>\n",
        "      <td>319670</td>\n",
        "      <td>iPhone</td>\n",
        "      <td>9</td>\n",
@@ -413,19 +412,19 @@
        "</div>"
       ],
       "text/plain": [
-       "  summary                _c0           Order ID       Product  \\\n",
-       "0   count             185950             185950        185950   \n",
-       "1    mean  8340.388475396612  230417.5693788653          None   \n",
-       "2  stddev  5450.554093395118  51512.73710999645          None   \n",
-       "3     min                  0             141234  20in Monitor   \n",
-       "4     max               9999             319670        iPhone   \n",
+       "  summary           Order ID       Product    Quantity Ordered  \\\n",
+       "0   count             185950        185950              185950   \n",
+       "1    mean  230417.5693788653          None  1.1243828986286637   \n",
+       "2  stddev  51512.73710999645          None  0.4427926240286694   \n",
+       "3     min             141234  20in Monitor                   1   \n",
+       "4     max             319670        iPhone                   9   \n",
        "\n",
-       "     Quantity Ordered          Price Each           Order Date  \\\n",
-       "0              185950              185950               185950   \n",
-       "1  1.1243828986286637  184.39973476748673                 None   \n",
-       "2  0.4427926240286694   332.7313298843438                 None   \n",
-       "3                   1              109.99  2019-01-01 03:07:00   \n",
-       "4                   9              999.99  2020-01-01 05:13:00   \n",
+       "           Price Each           Order Date  \\\n",
+       "0              185950               185950   \n",
+       "1  184.39973476748673                 None   \n",
+       "2   332.7313298843438                 None   \n",
+       "3              109.99  2019-01-01 03:07:00   \n",
+       "4              999.99  2020-01-01 05:13:00   \n",
        "\n",
        "                         Purchase Address               Month  \\\n",
        "0                                  185950              185950   \n",
@@ -442,7 +441,7 @@
        "4              999.99   Seattle                   9  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "id": "af7318a0-97e6-4e3a-802e-f8c030099419",
    "metadata": {},
    "outputs": [
@@ -463,17 +462,6 @@
      "output_type": "stream",
      "text": [
       "There are total 185950 row, Let print first 2 data rows:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24/07/07 16:58:21 WARN CSVHeaderChecker: CSV header does not conform to the schema.\n",
-      " Header: , Order ID, Product, Quantity Ordered, Price Each, Order Date, Purchase Address, Month, Sales, City, Hour\n",
-      " Schema: _c0, Order ID, Product, Quantity Ordered, Price Each, Order Date, Purchase Address, Month, Sales, City, Hour\n",
-      "Expected: _c0 but found: \n",
-      "CSV file: file:///Users/bharathvelamala/Documents/project/sales_analyis/data/Sales_Data.csv\n"
      ]
     },
     {
@@ -497,7 +485,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>_c0</th>\n",
        "      <th>Order ID</th>\n",
        "      <th>Product</th>\n",
        "      <th>Quantity Ordered</th>\n",
@@ -513,7 +500,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>295665</td>\n",
        "      <td>Macbook Pro Laptop</td>\n",
        "      <td>1</td>\n",
@@ -527,7 +513,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>295666</td>\n",
        "      <td>LG Washing Machine</td>\n",
        "      <td>1</td>\n",
@@ -544,9 +529,9 @@
        "</div>"
       ],
       "text/plain": [
-       "  _c0 Order ID             Product Quantity Ordered Price Each  \\\n",
-       "0   0   295665  Macbook Pro Laptop                1     1700.0   \n",
-       "1   1   295666  LG Washing Machine                1      600.0   \n",
+       "  Order ID             Product Quantity Ordered Price Each  \\\n",
+       "0   295665  Macbook Pro Laptop                1     1700.0   \n",
+       "1   295666  LG Washing Machine                1      600.0   \n",
        "\n",
        "            Order Date                        Purchase Address Month   Sales  \\\n",
        "0  2019-12-30 00:01:00  136 Church St, New York City, NY 10001    12  1700.0   \n",
@@ -557,7 +542,7 @@
        "1   New York City    7  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,14 +551,6 @@
     "print(f'There are total {sales_data.count()} row, Let print first 2 data rows:')\n",
     "sales_data.limit(2).toPandas()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c22e6361-6779-4f8b-909e-6430b8d85c19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
