--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f2f3446a-18b3-471b-a046-d4745dd15ad0",
    "metadata": {},
    "outputs": [],
@@ -29,18 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "id": "1379b4b3-ea67-4d85-8d1e-6cae7358eaff",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyspark\n",
-    "from pyspark.sql import SparkSession"
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import col, udf, lit\n",
+    "from pyspark.sql.types import IntegerType, StringType, ArrayType, DoubleType, FloatType"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f92f94a6-e690-40dd-9e04-95e3b01b5364",
    "metadata": {},
    "outputs": [],
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "dc8ff79a-9455-4b3a-ade7-d0f38053307b",
    "metadata": {},
    "outputs": [
@@ -71,7 +73,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.94.25:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.94.25:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -87,10 +89,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x10457a490>"
+       "<pyspark.sql.session.SparkSession at 0x10845d050>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "0814f000-39ad-4b65-88b0-83a8f5cda173",
    "metadata": {},
    "outputs": [],
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "c7360448-ab95-42bc-8df9-573ed1c7b795",
    "metadata": {},
    "outputs": [],
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "115d89a4-5eb7-4957-80de-d27c45fa972e",
    "metadata": {},
    "outputs": [
@@ -138,7 +140,7 @@
        "<bound method DataFrame.printSchema of DataFrame[_c0: string, Order ID: string, Product: string, Quantity Ordered: string, Price Each: string, Order Date: string, Purchase Address: string, Month: string, Sales: string, City: string, Hour: string]>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "913573e5-ff93-46c6-a23a-7a102c56fe19",
    "metadata": {},
    "outputs": [
@@ -261,7 +263,7 @@
        "10              Hour    string"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "6516221d-f6a0-499b-8806-c53fa0e5c63e",
    "metadata": {},
    "outputs": [],
@@ -284,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "ec504c66-37eb-499e-9815-2d61438d58f1",
    "metadata": {},
    "outputs": [
@@ -299,6 +301,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "24/07/08 17:10:30 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
       "                                                                                \r"
      ]
     },
@@ -441,7 +444,7 @@
        "4              999.99   Seattle                   9  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "af7318a0-97e6-4e3a-802e-f8c030099419",
    "metadata": {},
    "outputs": [
@@ -542,7 +545,7 @@
        "1   New York City    7  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,6 +553,252 @@
    "source": [
     "print(f'There are total {sales_data.count()} row, Let print first 2 data rows:')\n",
     "sales_data.limit(2).toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "893c3b2d-9489-4755-a10b-8f28e5cc05bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column Name</th>\n",
+       "      <th>Data type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Order ID</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Product</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Quantity Ordered</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Price Each</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Order Date</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Purchase Address</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Month</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sales</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>City</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Hour</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Column Name Data type\n",
+       "0          Order ID    string\n",
+       "1           Product    string\n",
+       "2  Quantity Ordered    string\n",
+       "3        Price Each    string\n",
+       "4        Order Date    string\n",
+       "5  Purchase Address    string\n",
+       "6             Month    string\n",
+       "7             Sales    string\n",
+       "8              City    string\n",
+       "9              Hour    string"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(sales_data.dtypes, columns = ['Column Name','Data type'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "5be33f8b-daa1-4f08-bdf3-b3b14811861b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string_columns = []\n",
+    "numeric_columns = []\n",
+    "array_columns = []\n",
+    "\n",
+    "for field in sales_data.schema.fields:\n",
+    "    if isinstance(field.dataType, StringType):\n",
+    "        string_columns.append(field.name)\n",
+    "    elif isinstance(field.dataType, (IntegerType, DoubleType, FloatType)):\n",
+    "        numeric_columns.append(field.name)\n",
+    "    elif isinstance(field.dataType, ArrayType):\n",
+    "        array_columns.append(field.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "e7c6f4dc-56e2-4061-852f-62709fe3e9c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@udf(IntegerType())\n",
+    "def count_missing(column, column_type):\n",
+    "    if column_type == \"string\":\n",
+    "        return 1 if column is None or column == \"\" else 0\n",
+    "    elif column_type == \"numeric\":\n",
+    "        return 1 if column == 0 or column is None or np.isnan(column) else 0\n",
+    "    elif column_type == \"array\":\n",
+    "        return sum(1 for elem in column if elem == 0 or np.isnan(elem))\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "f90703b6-fd52-458e-b8a0-15c1bd123292",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_values = {}\n",
+    "\n",
+    "for column in sales_data.columns:\n",
+    "    if column in string_columns:\n",
+    "        column_type = \"string\"\n",
+    "    elif column in numeric_columns:\n",
+    "        column_type = \"numeric\"\n",
+    "    elif column in array_columns:\n",
+    "        column_type = \"array\"\n",
+    "    else:\n",
+    "        continue\n",
+    "    \n",
+    "    missing_count = sales_data.select(count_missing(col(column), lit(column_type)).alias('missing')).agg({\"missing\": \"sum\"}).collect()[0][0]\n",
+    "    missing_values[column] = missing_count\n",
+    "\n",
+    "missing_df = pd.DataFrame([missing_values])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "0818f0ce-7887-463c-b8b7-90fa305341b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Purchase Address</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Order ID  Product  Quantity Ordered  Price Each  Order Date  \\\n",
+       "0         0        0                 0           0           0   \n",
+       "\n",
+       "   Purchase Address  Month  Sales  City  Hour  \n",
+       "0                 0      0      0     0     0  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_df"
    ]
   }
  ],
