--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "ea0757d9-0fcb-471f-8cfc-e4a396498c6b",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "f2f3446a-18b3-471b-a046-d4745dd15ad0",
    "metadata": {},
    "outputs": [],
@@ -29,20 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "id": "1379b4b3-ea67-4d85-8d1e-6cae7358eaff",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyspark\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import col, udf, lit\n",
+    "from pyspark.sql.functions import lit, desc, col, size, array_contains, isnan, udf, hour, array_min, array_max, countDistinct\n",
     "from pyspark.sql.types import IntegerType, StringType, ArrayType, DoubleType, FloatType"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "f92f94a6-e690-40dd-9e04-95e3b01b5364",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "dc8ff79a-9455-4b3a-ade7-d0f38053307b",
    "metadata": {},
    "outputs": [
@@ -89,10 +89,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x10845d050>"
+       "<pyspark.sql.session.SparkSession at 0x104d5ddd0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "0814f000-39ad-4b65-88b0-83a8f5cda173",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "c7360448-ab95-42bc-8df9-573ed1c7b795",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "id": "115d89a4-5eb7-4957-80de-d27c45fa972e",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "<bound method DataFrame.printSchema of DataFrame[_c0: string, Order ID: string, Product: string, Quantity Ordered: string, Price Each: string, Order Date: string, Purchase Address: string, Month: string, Sales: string, City: string, Hour: string]>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "913573e5-ff93-46c6-a23a-7a102c56fe19",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "10              Hour    string"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "6516221d-f6a0-499b-8806-c53fa0e5c63e",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "ec504c66-37eb-499e-9815-2d61438d58f1",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/07/08 17:10:30 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
       "                                                                                \r"
      ]
     },
@@ -444,7 +443,7 @@
        "4              999.99   Seattle                   9  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "id": "af7318a0-97e6-4e3a-802e-f8c030099419",
    "metadata": {},
    "outputs": [
@@ -545,7 +544,7 @@
        "1   New York City    7  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "id": "893c3b2d-9489-4755-a10b-8f28e5cc05bd",
    "metadata": {},
    "outputs": [
@@ -655,7 +654,7 @@
        "9              Hour    string"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "id": "5be33f8b-daa1-4f08-bdf3-b3b14811861b",
    "metadata": {},
    "outputs": [],
@@ -686,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "e7c6f4dc-56e2-4061-852f-62709fe3e9c7",
    "metadata": {},
    "outputs": [],
@@ -704,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 52,
    "id": "f90703b6-fd52-458e-b8a0-15c1bd123292",
    "metadata": {},
    "outputs": [],
@@ -729,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 53,
    "id": "0818f0ce-7887-463c-b8b7-90fa305341b2",
    "metadata": {},
    "outputs": [
@@ -792,7 +791,7 @@
        "0                 0      0      0     0     0  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,6 +799,53 @@
    "source": [
     "missing_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "38f1b8b9-0021-4819-8148-6ef0bfa96fd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales_data = sales_data.select(['Order ID', 'Product', 'Quantity Ordered', 'Price Each', 'Order Date', 'Month', 'City', 'Hour'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "84c56709-de12-47f7-9da4-dcf20705ea42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distinct_products = sales_data.groupby(sales_data.Product).count().orderBy(\"count\", acsending = False).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "5ae76761-0047-4c9a-83e0-b526f433883a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'LG Dryer': 646}, {'LG Washing Machine': 666}, {'Vareebadd Phone': 2065}, {'20in Monitor': 4101}, {'ThinkPad Laptop': 4128}, {'Macbook Pro Laptop': 4724}, {'Flatscreen TV': 4800}, {'Google Phone': 5525}, {'34in Ultrawide Monitor': 6181}, {'27in 4K Gaming Monitor': 6230}, {'iPhone': 6842}, {'27in FHD Monitor': 7507}, {'Bose SoundSport Headphones': 13325}, {'Apple Airpods Headphones': 15549}, {'Wired Headphones': 18882}, {'AA Batteries (4-pack)': 20577}, {'AAA Batteries (4-pack)': 20641}, {'Lightning Charging Cable': 21658}, {'USB-C Charging Cable': 21903}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "product_list = [{row['Product'] : row['count']} for row in distinct_products]\n",
+    "print(product_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1ff4bb4-6870-4188-ba41-456ff5661926",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
