--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "ea0757d9-0fcb-471f-8cfc-e4a396498c6b",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "f2f3446a-18b3-471b-a046-d4745dd15ad0",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "1379b4b3-ea67-4d85-8d1e-6cae7358eaff",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "f92f94a6-e690-40dd-9e04-95e3b01b5364",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "dc8ff79a-9455-4b3a-ade7-d0f38053307b",
    "metadata": {},
    "outputs": [
@@ -89,10 +89,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x104d5ddd0>"
+       "<pyspark.sql.session.SparkSession at 0x106679250>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "0814f000-39ad-4b65-88b0-83a8f5cda173",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "c7360448-ab95-42bc-8df9-573ed1c7b795",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "115d89a4-5eb7-4957-80de-d27c45fa972e",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "<bound method DataFrame.printSchema of DataFrame[_c0: string, Order ID: string, Product: string, Quantity Ordered: string, Price Each: string, Order Date: string, Purchase Address: string, Month: string, Sales: string, City: string, Hour: string]>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "913573e5-ff93-46c6-a23a-7a102c56fe19",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "10              Hour    string"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "6516221d-f6a0-499b-8806-c53fa0e5c63e",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "ec504c66-37eb-499e-9815-2d61438d58f1",
    "metadata": {},
    "outputs": [
@@ -301,6 +301,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "24/07/14 19:26:28 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
       "                                                                                \r"
      ]
     },
@@ -443,7 +444,7 @@
        "4              999.99   Seattle                   9  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "af7318a0-97e6-4e3a-802e-f8c030099419",
    "metadata": {},
    "outputs": [
@@ -544,7 +545,7 @@
        "1   New York City    7  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "893c3b2d-9489-4755-a10b-8f28e5cc05bd",
    "metadata": {},
    "outputs": [
@@ -654,7 +655,7 @@
        "9              Hour    string"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "5be33f8b-daa1-4f08-bdf3-b3b14811861b",
    "metadata": {},
    "outputs": [],
@@ -685,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "id": "e7c6f4dc-56e2-4061-852f-62709fe3e9c7",
    "metadata": {},
    "outputs": [],
@@ -703,10 +704,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "f90703b6-fd52-458e-b8a0-15c1bd123292",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "missing_values = {}\n",
     "\n",
@@ -728,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "0818f0ce-7887-463c-b8b7-90fa305341b2",
    "metadata": {},
    "outputs": [
@@ -791,7 +800,7 @@
        "0                 0      0      0     0     0  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "id": "38f1b8b9-0021-4819-8148-6ef0bfa96fd5",
    "metadata": {},
    "outputs": [],
@@ -812,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 19,
    "id": "84c56709-de12-47f7-9da4-dcf20705ea42",
    "metadata": {},
    "outputs": [],
@@ -822,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 20,
    "id": "5ae76761-0047-4c9a-83e0-b526f433883a",
    "metadata": {},
    "outputs": [
@@ -841,8 +850,211 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "01b633ae-9bb1-4b70-a510-aab70c60ab8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>295665</td>\n",
+       "      <td>Macbook Pro Laptop</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1700.0</td>\n",
+       "      <td>2019-12-30 00:01:00</td>\n",
+       "      <td>12</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>295666</td>\n",
+       "      <td>LG Washing Machine</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>2019-12-29 07:03:00</td>\n",
+       "      <td>12</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>295667</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>2019-12-12 18:21:00</td>\n",
+       "      <td>12</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>295668</td>\n",
+       "      <td>27in FHD Monitor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>2019-12-22 15:13:00</td>\n",
+       "      <td>12</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>295669</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>2019-12-18 12:38:00</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185945</th>\n",
+       "      <td>222905</td>\n",
+       "      <td>AAA Batteries (4-pack)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>2019-06-07 19:02:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Boston</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185946</th>\n",
+       "      <td>222906</td>\n",
+       "      <td>27in FHD Monitor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>2019-06-01 19:29:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185947</th>\n",
+       "      <td>222907</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>2019-06-22 18:57:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185948</th>\n",
+       "      <td>222908</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>2019-06-26 18:35:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185949</th>\n",
+       "      <td>222909</td>\n",
+       "      <td>AAA Batteries (4-pack)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>2019-06-25 14:33:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>185950 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Order ID                 Product Quantity Ordered Price Each  \\\n",
+       "0        295665      Macbook Pro Laptop                1     1700.0   \n",
+       "1        295666      LG Washing Machine                1      600.0   \n",
+       "2        295667    USB-C Charging Cable                1      11.95   \n",
+       "3        295668        27in FHD Monitor                1     149.99   \n",
+       "4        295669    USB-C Charging Cable                1      11.95   \n",
+       "...         ...                     ...              ...        ...   \n",
+       "185945   222905  AAA Batteries (4-pack)                1       2.99   \n",
+       "185946   222906        27in FHD Monitor                1     149.99   \n",
+       "185947   222907    USB-C Charging Cable                1      11.95   \n",
+       "185948   222908    USB-C Charging Cable                1      11.95   \n",
+       "185949   222909  AAA Batteries (4-pack)                1       2.99   \n",
+       "\n",
+       "                 Order Date Month            City Hour  \n",
+       "0       2019-12-30 00:01:00    12   New York City    0  \n",
+       "1       2019-12-29 07:03:00    12   New York City    7  \n",
+       "2       2019-12-12 18:21:00    12   New York City   18  \n",
+       "3       2019-12-22 15:13:00    12   San Francisco   15  \n",
+       "4       2019-12-18 12:38:00    12         Atlanta   12  \n",
+       "...                     ...   ...             ...  ...  \n",
+       "185945  2019-06-07 19:02:00     6          Boston   19  \n",
+       "185946  2019-06-01 19:29:00     6   New York City   19  \n",
+       "185947  2019-06-22 18:57:00     6   San Francisco   18  \n",
+       "185948  2019-06-26 18:35:00     6   San Francisco   18  \n",
+       "185949  2019-06-25 14:33:00     6         Atlanta   14  \n",
+       "\n",
+       "[185950 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales_data.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f1ff4bb4-6870-4188-ba41-456ff5661926",
+   "id": "32f6ca47-b0ce-425c-a920-401f8180e980",
    "metadata": {},
    "outputs": [],
    "source": []
